# agent-code-guard

./: .gitignore  README.md  pyproject.toml
docs/analysis/: 竞品比对报告-20260410.md
examples/: basic_usage.py
src/agent_code_guard/: __init__.py  analyzer.py  audit.py  constants.py  executor.py
tests/: test_code_guard.py
