[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-code-guard"
version = "0.1.0"
description = "Lightweight code execution guardrails for AI agents: AST analysis, resource limits, audit logging, and violation tracking"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "FiAgent Team" },
]
keywords = ["agent", "sandbox", "code-execution", "guardrails", "audit", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Security",
]
dependencies = ["pydantic>=2.0"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/alasong/agent-code-guard"
Repository = "https://github.com/alasong/agent-code-guard"
"Bug Tracker" = "https://github.com/alasong/agent-code-guard/issues"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
